exports[`The ID5 Baton Lambda stack > matches the CODE snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuLambdaFunction"
    ],
    "gu:cdk:version": "62.0.1"
  },
  "Parameters": {
    "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/account/services/dotcom-store.bucket"
    },
    "DistributionBucketName": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts"
    }
  },
  "Resources": {
    "DictionaryDeployLambdaServiceRoleAD814AB7": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "ab-testing-deploy"
          },
          {
            "Key": "gu:cdk:version",
            "Value": "62.0.1"
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering"
          },
          {
            "Key": "Stack",
            "Value": "frontend"
          },
          {
            "Key": "Stage",
            "Value": "CODE"
          }
        ]
      }
    },
    "DictionaryDeployLambdaServiceRoleDefaultPolicy63259B6E": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*"
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName"
                      }
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName"
                      },
                      "/frontend/CODE/ab-testing-deploy/lambda.zip"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/CODE/frontend/ab-testing-deploy"
                  ]
                ]
              }
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/CODE/frontend/ab-testing-deploy/*"
                  ]
                ]
              }
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*"
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
                      }
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
                      },
                      "/*"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": [
                "ssm:DescribeParameters",
                "ssm:GetParameters",
                "ssm:GetParameter",
                "ssm:GetParameterHistory"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/ab-testing-deploy/CODE/fastly-api-token"
                  ]
                ]
              }
            },
            {
              "Action": [
                "ssm:DescribeParameters",
                "ssm:GetParameters",
                "ssm:GetParameter",
                "ssm:GetParameterHistory"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/ab-testing-deploy/CODE/fastly-config"
                  ]
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "DictionaryDeployLambdaServiceRoleDefaultPolicy63259B6E",
        "Roles": [
          {
            "Ref": "DictionaryDeployLambdaServiceRoleAD814AB7"
          }
        ]
      }
    },
    "DictionaryDeployLambdaD0FF981C": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName"
          },
          "S3Key": "frontend/CODE/ab-testing-deploy/lambda.zip"
        },
        "Environment": {
          "Variables": {
            "STAGE": "CODE",
            "ARTIFACT_BUCKET_NAME": {
              "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
            },
            "STACK": "frontend",
            "APP": "ab-testing-deploy"
          }
        },
        "FunctionName": "ab-testing-deploy-CODE",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "JSON"
        },
        "MemorySize": 256,
        "Role": {
          "Fn::GetAtt": [
            "DictionaryDeployLambdaServiceRoleAD814AB7",
            "Arn"
          ]
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "ab-testing-deploy"
          },
          {
            "Key": "gu:cdk:version",
            "Value": "62.0.1"
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering"
          },
          {
            "Key": "Stack",
            "Value": "frontend"
          },
          {
            "Key": "Stage",
            "Value": "CODE"
          }
        ],
        "Timeout": 30
      },
      "DependsOn": [
        "DictionaryDeployLambdaServiceRoleDefaultPolicy63259B6E",
        "DictionaryDeployLambdaServiceRoleAD814AB7"
      ]
    },
    "InvokeDictionaryDeployLambda": {
      "Type": "AWS::CloudFormation::CustomResource",
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "DictionaryDeployLambdaD0FF981C",
            "Arn"
          ]
        },
        "ServiceTimeout": "300"
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    }
  }
}
`;

exports[`The ID5 Baton Lambda stack > matches the PROD snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuLambdaFunction"
    ],
    "gu:cdk:version": "62.0.1"
  },
  "Parameters": {
    "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/account/services/dotcom-store.bucket"
    },
    "DistributionBucketName": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts"
    }
  },
  "Resources": {
    "DictionaryDeployLambdaServiceRoleAD814AB7": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "ab-testing-deploy"
          },
          {
            "Key": "gu:cdk:version",
            "Value": "62.0.1"
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering"
          },
          {
            "Key": "Stack",
            "Value": "frontend"
          },
          {
            "Key": "Stage",
            "Value": "PROD"
          }
        ]
      }
    },
    "DictionaryDeployLambdaServiceRoleDefaultPolicy63259B6E": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*"
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName"
                      }
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName"
                      },
                      "/frontend/PROD/ab-testing-deploy/lambda.zip"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/PROD/frontend/ab-testing-deploy"
                  ]
                ]
              }
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/PROD/frontend/ab-testing-deploy/*"
                  ]
                ]
              }
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*"
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
                      }
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
                      },
                      "/*"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": [
                "ssm:DescribeParameters",
                "ssm:GetParameters",
                "ssm:GetParameter",
                "ssm:GetParameterHistory"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/ab-testing-deploy/PROD/fastly-api-token"
                  ]
                ]
              }
            },
            {
              "Action": [
                "ssm:DescribeParameters",
                "ssm:GetParameters",
                "ssm:GetParameter",
                "ssm:GetParameterHistory"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/ab-testing-deploy/PROD/fastly-config"
                  ]
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "DictionaryDeployLambdaServiceRoleDefaultPolicy63259B6E",
        "Roles": [
          {
            "Ref": "DictionaryDeployLambdaServiceRoleAD814AB7"
          }
        ]
      }
    },
    "DictionaryDeployLambdaD0FF981C": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName"
          },
          "S3Key": "frontend/PROD/ab-testing-deploy/lambda.zip"
        },
        "Environment": {
          "Variables": {
            "STAGE": "PROD",
            "ARTIFACT_BUCKET_NAME": {
              "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
            },
            "STACK": "frontend",
            "APP": "ab-testing-deploy"
          }
        },
        "FunctionName": "ab-testing-deploy-PROD",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "JSON"
        },
        "MemorySize": 256,
        "Role": {
          "Fn::GetAtt": [
            "DictionaryDeployLambdaServiceRoleAD814AB7",
            "Arn"
          ]
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "ab-testing-deploy"
          },
          {
            "Key": "gu:cdk:version",
            "Value": "62.0.1"
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering"
          },
          {
            "Key": "Stack",
            "Value": "frontend"
          },
          {
            "Key": "Stage",
            "Value": "PROD"
          }
        ],
        "Timeout": 30
      },
      "DependsOn": [
        "DictionaryDeployLambdaServiceRoleDefaultPolicy63259B6E",
        "DictionaryDeployLambdaServiceRoleAD814AB7"
      ]
    },
    "InvokeDictionaryDeployLambda": {
      "Type": "AWS::CloudFormation::CustomResource",
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "DictionaryDeployLambdaD0FF981C",
            "Arn"
          ]
        },
        "ServiceTimeout": "300"
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    }
  }
}
`;
